--- a/spec/jenkins.yml.example
+++ b/spec/jenkins.yml.example
@@ -7,3 +7,4 @@ jobs:
     scm_provider: 'git',
     scm_url:      'git://github.com/apraditya/sampleapp.git',
     scm_branch:   'master'
+    shell_script: <%= File.join(File.dirname(__FILE__), 'fixtures', 'files', 'build') %>
